--- a/src/conf/CMakeLists.txt
+++ b/src/conf/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(conf ConfFile.cpp Settings.cpp Setting.cpp RecentRepositories.cpp
                  RecentRepository.cpp)
 
-target_link_libraries(conf lua Qt5::Core util)
+target_link_libraries(conf lua Qt5::Core gittyupUtil)
 
 target_compile_definitions(
   conf PRIVATE SCINTILLUA_LEXERS_DIR="${SCINTILLUA_LEXERS_DIR}")
